# speed-test

./: .gitignore  README.md  pyproject.toml
docs/plans/: speed-test-tui.md
src/speed_test_tui/: __init__.py  __main__.py  cli.py  config.py  display.py  engine.py  fake.py  input_helper.py  install.py  interface.py  update.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_display_engine.py  test_fake.py  test_input_helper.py  test_install.py  test_update.py
